Fix border spacing on buttons

--- a/includes/scriptlesssocialsharing-style.scss
+++ b/includes/scriptlesssocialsharing-style.scss
@@ -1,10 +1,13 @@
 @import "_variables.scss";
 
 .scriptlesssocialsharing {
+	box-sizing: border-box;
 	margin: 18px auto;
 }
 
 .scriptlesssocialsharing-buttons {
+	border-collapse: separate;
+	border-spacing: 3px;
 	display: table;
 	table-layout: fixed;
 	width: 100%;
@@ -12,16 +15,11 @@
 	.button {
 		border: none;
 		border-radius: 0;
-		border-right: 3px solid white;
 		color: white;
 		display: table-cell;
 		padding: 12px 0;
 		text-align: center;
 		text-decoration: none;
-
-		&:last-of-type {
-			border-right: none;
-		}
 	}
 
 	.sss-name {
@@ -43,6 +41,6 @@
 	.scriptlesssocialsharing-buttons .sss-name {
 		position: relative;
 		height: auto;
-		width: auto
+		width: auto;
 	}
 }
